resources/app-sre/observatorium-production/observatorium-api-production.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    app: observatorium-api
  name: observatorium-api
spec:
  host: observatorium.api.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
