resources/app-sre/observatorium-production/observatorium-conprof.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: conprof
  name: observatorium-conprof
spec:
  host: conprof-observatorium.api.openshift.com
  # TODO(prekumar): Uncomment after migration.
  #host: conprof.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: conprof
    weight: 100
  wildcardPolicy: None
