resources/app-sre/observatorium-production/observatorium-jaeger-production.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    app: jaeger
  name: observatorium-jaeger
spec:
  host: observatorium-jaeger.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: jaeger-query
    weight: 100
  wildcardPolicy: None
