resources/app-sre/observatorium-production/observatorium-parca.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    app: parca
  name: observatorium-parca
spec:
  host: conprof.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: parca
    weight: 100
  wildcardPolicy: None
